[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Sprites/Saves/Save.png" type="Texture" id=1]
[ext_resource path="res://Src/Scripts/Save.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.7323, 10.6049 )

[node name="Save" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 16, 16 )
texture = ExtResource( 1 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 21 )
shape = SubResource( 1 )

[node name="AnimationTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="area_entered" from="." to="." method="_on_Save_area_entered"]
[connection signal="timeout" from="AnimationTimer" to="." method="_on_AnimationTimer_timeout"]
